SERVER-60497 renameCollectionForApplyOps should skip system.buckets rename check

(cherry picked from commit fba7e40847260c1cff61adbd331be308ee140766)