src/mongo/db/catalog/rename_collection.cpp
@@ -115,11 +115,6 @@ Status checkSourceAndTargetNamespaces(OperationContext* opCtx,
 
     IndexBuildsCoordinator::get(opCtx)->assertNoIndexBuildInProgForCollection(sourceColl->uuid());
 
-    if (source.isTimeseriesBucketsCollection()) {
-        return Status(ErrorCodes::IllegalOperation,
-                      str::stream() << "Renaming system.buckets collections is disallowed");
-    }
-
     const auto targetColl = catalog->lookupCollectionByNamespace(opCtx, target);
 
     if (!targetColl) {
@@ -834,6 +829,10 @@ void validateNamespacesForRenameCollection(OperationContext* opCtx,
     uassert(ErrorCodes::IllegalOperation,
             "renaming system.views collection or renaming to system.views is not allowed",
             !source.isSystemDotViews() && !target.isSystemDotViews());
+
+    uassert(ErrorCodes::IllegalOperation,
+            "Renaming system.buckets collections is not allowed",
+            !source.isTimeseriesBucketsCollection());
 }
 
 void validateAndRunRenameCollection(OperationContext* opCtx,
